分支提交,压缩版代码

--- a/login.html
+++ b/login.html
@@ -1,85 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh_CN">
-<head>
-	<meta charset="UTF-8">
-	<!--支持移动设备优先-->
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>登录-用户</title>
-	
-	<!--导入bootstrap的css-->
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
-	<!--导入自定义的css样式-->
-	<link rel="stylesheet" href="css/login.css"/>
-	<!--导入jquery文件-->
-	<script type="text/javascript" src="js/man.js"></script>
-	<!--导入bootstrap的js文件,因为它依赖于jquery-->
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js">
-	</script>
-	<script type="text/javascript" src="js/network.js"></script>
-	<script type="text/javascript" src="js/url.js"></script>
-	<script type="text/javascript" src="js/util.js"></script>
-	<script type="text/javascript" src="js/login.js"></script>
-
-</head>
-<body>
-	<!--布局容器-->
-	<div class="container img-responsive">	
-		<div class="row text-center title">
-			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 title-button">
-				<span class="title-item isSelect" gt="login.html">
-					<span><img src="img/登录(select).png"/></span> 登录
-					<!--用户-->
-				</span>
-				<span class="h5">|</span>
-				<span class="title-item" gt="regist.html">
-					注册 
-					<!-- 退出 -->
-					<span><img src="img/注册.png"/></span> 
-				</span>
-			</div>
-			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 col-xs-offset-2 col-sm-offset-4 col-md-offset-6 col-lg-offset-6 title-button" >
-				<span  class="title-item" gt="index.html">
-					<span><img src="img/首页.png"/></span>
-					首页
-				</span>
-				<span class="h5">|</span>
-				<span class="title-item" gt="help.html">
-					关于
-					<span><img src="img/关于.png"/></span>
-				</span>
-			</div>
-		</div>
-	</div>
-	
-	<!--登录页面-->
-	<div class="container user-login">
-		<div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-title">用户登录</div>
-
-		<div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 error-msg text-center"></div>
-
-		<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4  col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-item">
-			<div class="user-login-item-img">
-				<img src="img/账号.png"/>
-			</div>
-			<div class="user-login-item-input">
-				<input type="text" val="" class="get-user" placeholder="请输入用户名" />
-			</div>
-		</div>
-
-		<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4 col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-item">
-			<div class="user-login-item-img">
-				<img src="img/密码.png"/>
-			</div>
-			<div class="user-login-item-input code-input">
-				<input type="number" length='4' val="" class="code-user" placeholder="请输入验证码" />
-			</div>
-			<div class="get-code">获取验证码</div>
-		</div>
-		
-		<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4 col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-btn user-login-item">登录</div>
-		
-	</div>
-
-	<div class="goto">修改邮箱</div>
-</body>
-</html>
+<!DOCTYPE html><html lang="zh_CN"><head>	<meta charset="UTF-8">		<meta name="viewport" content="width=device-width,initial-scale=1">	<title>登录-用户</title>			<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>		<link rel="stylesheet" href="css/login.css"/>		<script type="text/javascript" src="js/man.js"></script>		<script type="text/javascript" src="bootstrap/js/bootstrap.js">	</script>	<script type="text/javascript" src="js/network.js"></script>	<script type="text/javascript" src="js/url.js"></script>	<script type="text/javascript" src="js/util.js"></script>	<script type="text/javascript" src="js/login.js"></script></head><body>		<div class="container img-responsive">			<div class="row text-center title">			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 title-button">				<span class="title-item isSelect" gt="login.html">					<span><img src="img/登录(select).png"/></span> 登录									</span>				<span class="h5">|</span>				<span class="title-item" gt="regist.html">					注册 										<span><img src="img/注册.png"/></span> 				</span>			</div>			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 col-xs-offset-2 col-sm-offset-4 col-md-offset-6 col-lg-offset-6 title-button" >				<span  class="title-item" gt="index.html">					<span><img src="img/首页.png"/></span>					首页				</span>				<span class="h5">|</span>				<span class="title-item" gt="help.html">					关于					<span><img src="img/关于.png"/></span>				</span>			</div>		</div>	</div>			<div class="container user-login">		<div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-title">用户登录</div>		<div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 error-msg text-center"></div>		<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4  col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-item">			<div class="user-login-item-img">				<img src="img/账号.png"/>			</div>			<div class="user-login-item-input">				<input type="text" val="" class="get-user" placeholder="请输入用户名" />			</div>		</div>		<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4 col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-item">			<div class="user-login-item-img">				<img src="img/密码.png"/>			</div>			<div class="user-login-item-input code-input">				<input type="number" length='4' val="" class="code-user" placeholder="请输入验证码" />			</div>			<div class="get-code">获取验证码</div>		</div>				<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4 col-xs-offset-1 col-sm-offset-2 col-lg-offset-4 col-md-offset-3 user-login-btn user-login-item">登录</div>			</div>	<div class="goto">修改邮箱</div></body></html>
