--- a/room.html
+++ b/room.html
@@ -1,71 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh_CN">
-<head>
-	<meta charset="UTF-8">
-	<!--支持移动设备优先-->
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>房间列表</title>
-	
-	<!--导入bootstrap的css-->
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
-	<!--导入自定义的css样式-->
-	<link rel="stylesheet" href="css/room.css"/>
-	<!--导入jquery文件-->
-	<script type="text/javascript" src="js/man.js"></script>
-	<!--导入bootstrap的js文件,因为它依赖于jquery-->
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js">
-	</script>
-	<script type="text/javascript" src="js/network.js"></script>
-	<script type="text/javascript" src="js/url.js"></script>
-	<script type="text/javascript" src="js/util.js"></script>
-	<script type="text/javascript" src="js/room.js"></script>
-
-</head>
-<body>
-	<!--布局容器-->
-	<div class="container img-responsive">	
-		<div class="row text-center title">
-			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 title-button">
-				<span class="title-item" gt="login.html">
-					<span><img src="img/登录.png"/></span> 登录
-					<!--用户-->
-				</span>
-				<span class="h5">|</span>
-				<span class="title-item" gt="regist.html">
-					注册 
-					<!-- 退出 -->
-					<span><img src="img/注册.png"/></span> 
-				</span>
-			</div>
-			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 col-xs-offset-2 col-sm-offset-4 col-md-offset-6 col-lg-offset-6 title-button" >
-				<span class="title-item" gt="index.html">
-					<span><img src="img/首页.png"/></span>
-					首页
-				</span>
-				<span class="h5">|</span>
-				<span class="title-item" gt="help.html">
-					关于
-					<span><img src="img/关于.png"/></span>
-				</span>
-			</div>
-		</div>
-	</div>
-	
-	
-	<!--房间列表-->
-	<div class="container room-block">
-		
-		
-	</div>
-
-	<!--分页部分-->
-	<div class="select-num" style="display:none">
-		<span class="prev_food">上一页</span>
-		<a href="#" class="pageStart">1</a>
-		<text>...</text>
-		<a href="#" class="pageEnd">4</a>
-		<span class="next_food">下一页</span>
-	</div>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="zh_CN"><head>	<meta charset="UTF-8">		<meta name="viewport" content="width=device-width,initial-scale=1">	<title>房间列表</title>			<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>		<link rel="stylesheet" href="css/room.css"/>		<script type="text/javascript" src="js/man.js"></script>		<script type="text/javascript" src="bootstrap/js/bootstrap.js">	</script>	<script type="text/javascript" src="js/network.js"></script>	<script type="text/javascript" src="js/url.js"></script>	<script type="text/javascript" src="js/util.js"></script>	<script type="text/javascript" src="js/room.js"></script></head><body>		<div class="container img-responsive">			<div class="row text-center title">			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 title-button">				<span class="title-item" gt="login.html">					<span><img src="img/登录.png"/></span> 登录									</span>				<span class="h5">|</span>				<span class="title-item" gt="regist.html">					注册 										<span><img src="img/注册.png"/></span> 				</span>			</div>			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-3 col-xs-offset-2 col-sm-offset-4 col-md-offset-6 col-lg-offset-6 title-button" >				<span class="title-item" gt="index.html">					<span><img src="img/首页.png"/></span>					首页				</span>				<span class="h5">|</span>				<span class="title-item" gt="help.html">					关于					<span><img src="img/关于.png"/></span>				</span>			</div>		</div>	</div>				<div class="container room-block">					</div>		<div class="select-num" style="display:none">		<span class="prev_food">上一页</span>		<a href="#" class="pageStart">1</a>		<text>...</text>		<a href="#" class="pageEnd">4</a>		<span class="next_food">下一页</span>	</div></body></html>
